change the name of the file

--- a/.github/workflows/workflow_2.yml
+++ b/.github/workflows/workflow_2.yml
@@ -60,7 +60,7 @@ jobs:
           git config --global user.email "indikak2005@gmail.com"
           git config --global user.name "indikak2005"
           echo ${{github.sha}}
-          cat deployment.sh
+          cat deployment.yml
           sed -i "s/indikak2005/rs_policy_service.*/$indikak2005/rs_policy_service:${{github.sha}}/g" deployment.yml 
           git add .
           git commit -am "update image with tage : ${{github.sha}}"
