--- a/.github/workflows/workflow_2.yml
+++ b/.github/workflows/workflow_2.yml
@@ -60,8 +60,8 @@ jobs:
           git config --global user.email "indikak2005@gmail.com"
           git config --global user.name "indikak2005"
           echo ${{github.sha}}
-          cat deployment.yml
-          sed -i "s/indikak2005/rs_policy_service.*/indikak2005/rs_policy_service:${{github.sha}}/g" deployment.yml 
+          cat deployment.yml          
+          sed -i 's/\(rs_policy_service:.*:\)[0-9]\+/rs_policy_service: ${{github.sha}}/' deployment.yml
           git add .
           git commit -am "update image with tage : ${{github.sha}}"
       - run: git push origin main 
