--- a/.github/workflows/workflow_2.yml
+++ b/.github/workflows/workflow_2.yml
@@ -40,7 +40,7 @@ jobs:
            context: .
            file: ./Dockerfile
            push: true
-           tags: ${{ secrets.DOCKERHUB_USERNAME }}/rs_policy_service:${{ github.sha }}
+           tags: ${{ secrets.DOCKERHUB_USERNAME }}/policy-service:${{ github.sha }}
          env:
           DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PSSWORD }}
@@ -60,8 +60,8 @@ jobs:
           git config --global user.email "indikak2005@gmail.com"
           git config --global user.name "indikak2005"
           echo ${{github.sha}}         
-          sed -i 's/indikak2005\/rs_policy_service:[0-9a-zA-Z]\+/indikak2005\/rs_policy_service:${{github.sha}}/g' deployment.yml
-          cat deployment.yml 
+          sed -i 's/indikak2005\/rs_policy_service:[0-9a-zA-Z]\+/indikak2005\/rs_policy_service:${{github.sha}}/g'  /dev/deployment.yml
+          cat /dev/deployment.yml 
           git add .
           git commit -am "update image with tage : ${{github.sha}}"
       - run: git push origin main 
