included SONAR URL sonar.host.url property

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=indika-kularatne_rs_policy_service
 sonar.organization=indika-kularatne
 sonar.sources=.
 sonar.java.binaries=target/classes
+sonar.host.url=https://sonarcloud.io
