--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,9 @@
 	
 	<properties>
 		<java.version>17</java.version>
-		  <sonar.organization>indika-kularatne</sonar.organization>
-  		  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.organization>indika-kularatne</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectKey=indika-kularatne_rs_policy_service
 	</properties>
 
 	
@@ -70,6 +71,14 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			
+		        <plugin>
+		            <groupId>org.sonarsource.scanner.maven</groupId>
+		            <artifactId>sonar-maven-plugin</artifactId>
+		            <version>3.11.0.3922</version>
+		        </plugin>
+
+			
 		</plugins>
 	</build>
 
