--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,12 @@
 	<description>RS Cored Stub Service</description>
 	
 	<properties>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.organization>indika-kularatne</sonar.organization>  		
+		<sonar.projectKey>indika-kularatne_rs_policy_service</sonar.projectKey>
 		<java.version>17</java.version>
-		<sonar.organization>indika-kularatne</sonar.organization>
-  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.projectKey=indika-kularatne_rs_policy_service
 	</properties>
 
-	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
