--- a/.github/workflows/workflow_3.yml
+++ b/.github/workflows/workflow_3.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   buil_push_docker_image:
     runs-on: ubuntu-latest
+    environment: PROD
     
     steps:
       - name: Check Out
@@ -23,6 +24,15 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+
+      - name: Build Project
+        run: mvn clean install -DskipTests
+
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@v2.1.0
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
 
       #- name: Cache SonarCloud packages
       #  uses: actions/cache@v3
@@ -38,10 +48,10 @@ jobs:
       #    key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
       #    restore-keys: ${{ runner.os }}-m2
           
-      - name: Build and analyze
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #- name: Build and analyze
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+      #    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         #run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=indika-kularatne_rs_policy_service -Dsonar.login=0f187069eddb7b5f72593d7fdf48dcb30dc16b1d
-        run: mvn clean verify sonar:sonar -Dsonar.login=0f187069eddb7b5f72593d7fdf48dcb30dc16b1 -Dsonar.projectKey=indika-kularatne_rs_policy_service
+        #run: mvn clean verify sonar:sonar -Dsonar.login=0f187069eddb7b5f72593d7fdf48dcb30dc16b1 -Dsonar.projectKey=indika-kularatne_rs_policy_service
         
