--- a/.github/workflows/workflow_3.yml
+++ b/.github/workflows/workflow_3.yml
@@ -29,11 +29,6 @@ jobs:
       - name: Build Project
         run: mvn clean install -DskipTests
 
-      #- name: SonarQube Scan
-        #uses: sonarsource/sonarqube-scan-action@v2.1.0
-        #env:
-          #SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          #SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -49,11 +44,25 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
           
-      - name: Build and analyze
+      - name: SAST analysis using SonarCloud
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn clean verify sonar:sonar  -Dsonar.host.url=https://sonarcloud.io  -Dsonar.organization=indika-kularatne  -Dsonar.projectKey=indika-kularatne_rs_policy_service  -Dsonar.qualitygate.wait=true 
 
-        #run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=indika-kularatne_rs_policy_service -Dsonar.login=0f187069eddb7b5f72593d7fdf48dcb30dc16b1d
-        
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PSSWORD }}
+
+      -  name: Build and Push
+         uses: docker/build-push-action@v5
+         with:
+           context: .
+           file: ./Dockerfile
+           push: true
+           tags: ${{ secrets.DOCKERHUB_ORG_NAME }}/policy-service:${{ github.sha }}
+         env:
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PSSWORD }}
