--- a/.github/workflows/workflow_3.yml
+++ b/.github/workflows/workflow_3.yml
@@ -62,7 +62,8 @@ jobs:
            context: .
            file: ./Dockerfile
            push: true
-           tags: ${{ secrets.DOCKERHUB_ORG_NAME }}/rs-policy-service:${{ github.sha }}
+           #tags: ${{ secrets.DOCKERHUB_ORG_NAME }}/rs-policy-service:${{ github.sha }}
+           tags: tuneprotectgroup/rs-policy-service:${{ github.sha }}
          env:
           DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PSSWORD }}
