--- a/.github/workflows/workflow_3.yml
+++ b/.github/workflows/workflow_3.yml
@@ -7,6 +7,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch: 
 jobs:
   buil_push_docker_image:
     runs-on: ubuntu-latest
